--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lotide",
+  "name": "@switchtwisted/lotide",
   "version": "1.0.0",
-  "description": "",
-  "main": "assertArraysEqual.js",
+  "description": "A mini clone of the [Lodash](https://lodash.com) library.",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
@@ -15,7 +15,9 @@
     "url": "git+https://github.com/Puzzlebottom/lotide.git"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Conor Meldrum"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Puzzlebottom/lotide/issues"
