--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "test-watch": "mocha --watch"
+    "watch": "mocha --watch"
   },
   "repository": {
     "type": "git",
